# day

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: plugin.json
.design/: assess-docs.md  assess-telos.md  bridging.md  current-cycle-position.md  design-atom-backing.md  repo-defined-injection.md  rigor-as-artifact.md  scaffold.md  telos-subject-shape.md  vocabulary-verbs.md
.github/workflows/: ci.yml  release.yml
commands/: adversarial-review.md  design.md
docs/: CONVENTIONS.md  ROADMAP.md  TELOS.md
hooks/: hooks.json
src/: atoms.rs  bridge.rs  cache.rs  design.rs  docs.rs  doctor.rs  git.rs  hooks.rs  kan_client.rs  lib.rs  main.rs  mcp.rs  position.rs  practice.rs  probe.rs  record.rs  schema.rs  status.rs  telos.rs  tension.rs  vocabulary.rs
src/cli/: mod.rs
tests/: assess.rs  assess_atom.rs  assess_telos.rs  bridge.rs  cli.rs  cycle_position.rs  design.rs  kan_conformance.rs  mcp_server.rs  plugin.rs  practice.rs  status.rs  vocabulary.rs
tests/common/: mod.rs
