[package]
name = "day"
version = "0.1.2-beta.1"
edition = "2021"
license = "MIT"
description = "Structured process layer for AI-assisted development — teloi, atoms, and drift, recorded in kan."
repository = "https://github.com/kan-tools/day"
readme = "README.md"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
rmcp = { version = "2.2.0", features = ["transport-io"] }
schemars = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.52.4", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.4", features = ["process", "io-util", "time"] }
